--- a/index.html
+++ b/index.html
@@ -20,10 +20,25 @@
             <nav class="container">
                 <h1>Dsmovie</h1>
                 <div class="dsmovie-contact-container">
-                    <img src="img/github.svg" alt="Github"/>
+                    <img src="img/github.svg" alt="Github" />
                     <a href="https://github.com/devsuperior">/devsuperior</a>
                 </div>
             </nav>
         </header>
+
+        <main>
+            <section id="dsmovie-card-list" class="container">
+                <div class="dsmovie-card">
+                    <img
+                        src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                        alt="Ron Bugado"
+                    />
+                    <div class="dsmovie-card-description">
+                        <h3>Ron Bugado</h3>
+                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
