Listagem de cards

--- a/index.html
+++ b/index.html
@@ -28,14 +28,116 @@
 
         <main>
             <section id="dsmovie-card-list" class="container">
-                <div class="dsmovie-card">
-                    <img
-                        src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
-                        alt="Ron Bugado"
-                    />
-                    <div class="dsmovie-card-description">
-                        <h3>Ron Bugado</h3>
-                        <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                
+                <div class="row">
+
+                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
