Avaliação com estrelas

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 
         <main>
             <section id="dsmovie-card-list" class="container">
-                
                 <div class="row">
-
                     <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
                         <div class="dsmovie-card">
                             <img
@@ -39,7 +37,20 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -51,7 +62,9 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="form.html"
+                                    >Avaliar</a
+                                >
                             </div>
                         </div>
                     </div>
@@ -63,7 +76,9 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="form.html"
+                                    >Avaliar</a
+                                >
                             </div>
                         </div>
                     </div>
@@ -75,7 +90,9 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="form.html"
+                                    >Avaliar</a
+                                >
                             </div>
                         </div>
                     </div>
@@ -87,7 +104,9 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="form.html"
+                                    >Avaliar</a
+                                >
                             </div>
                         </div>
                     </div>
@@ -99,7 +118,9 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="form.html"
+                                    >Avaliar</a
+                                >
                             </div>
                         </div>
                     </div>
@@ -111,7 +132,9 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="form.html"
+                                    >Avaliar</a
+                                >
                             </div>
                         </div>
                     </div>
@@ -123,7 +146,9 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="form.html"
+                                    >Avaliar</a
+                                >
                             </div>
                         </div>
                     </div>
@@ -135,7 +160,9 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="form.html"
+                                    >Avaliar</a
+                                >
                             </div>
                         </div>
                     </div>
