--- a/index.html
+++ b/index.html
@@ -62,13 +62,23 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html"
-                                    >Avaliar</a
-                                >
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                    </div><div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
                         <div class="dsmovie-card">
                             <img
                                 src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
@@ -76,13 +86,23 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html"
-                                    >Avaliar</a
-                                >
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                    </div><div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
                         <div class="dsmovie-card">
                             <img
                                 src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
@@ -90,13 +110,23 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html"
-                                    >Avaliar</a
-                                >
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                    </div><div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
                         <div class="dsmovie-card">
                             <img
                                 src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
@@ -104,13 +134,23 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html"
-                                    >Avaliar</a
-                                >
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                    </div><div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
                         <div class="dsmovie-card">
                             <img
                                 src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
@@ -118,13 +158,23 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html"
-                                    >Avaliar</a
-                                >
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                    </div><div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
                         <div class="dsmovie-card">
                             <img
                                 src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
@@ -132,13 +182,23 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html"
-                                    >Avaliar</a
-                                >
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                    </div><div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
                         <div class="dsmovie-card">
                             <img
                                 src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
@@ -146,13 +206,23 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html"
-                                    >Avaliar</a
-                                >
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                    </div><div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
                         <div class="dsmovie-card">
                             <img
                                 src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
@@ -160,9 +230,92 @@
                             />
                             <div class="dsmovie-card-description">
                                 <h3>Ron Bugado</h3>
-                                <a class="dsmovie-btn" href="form.html"
-                                    >Avaliar</a
-                                >
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="col-sm-6 col-lg-4 col-xl-3 nb-3">
+                        <div class="dsmovie-card">
+                            <img
+                                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/sdL37sfUBth7mdkAolI83bXAl7L.jpg"
+                                alt="Ron Bugado"
+                            />
+                            <div class="dsmovie-card-description">
+                                <h3>Ron Bugado</h3>
+                                <div class="dsmovie-card-description-bottom">
+                                    <h4>3,8</h4>
+                                    <div>
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-full.svg" alt="star">
+                                        <img src="img/star-half.svg" alt="star">
+                                        <img src="img/star-empty.svg" alt="star">
+                                    </div>
+                                    <p>10 avaliações</p>
+                                    <a class="dsmovie-btn" href="form.html"
+                                        >Avaliar</a
+                                    >
+                                </div>
                             </div>
                         </div>
                     </div>
